--- a/main_window.ui
+++ b/main_window.ui
@@ -115,22 +115,7 @@
      </property>
      <item>
       <property name="text">
-       <string>COM1</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
        <string>COM2</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>COM3</string>
-      </property>
-     </item>
-     <item>
-      <property name="text">
-       <string>COM4</string>
       </property>
      </item>
     </widget>
@@ -484,16 +469,25 @@
       <rect>
        <x>30</x>
        <y>130</y>
-       <width>561</width>
+       <width>611</width>
        <height>201</height>
       </rect>
+     </property>
+     <property name="showGrid">
+      <bool>true</bool>
+     </property>
+     <property name="cornerButtonEnabled">
+      <bool>true</bool>
      </property>
      <property name="rowCount">
       <number>5</number>
      </property>
      <property name="columnCount">
-      <number>4</number>
+      <number>6</number>
      </property>
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
      <row/>
      <row/>
      <row/>
@@ -517,6 +511,16 @@
      <column>
       <property name="text">
        <string>数据前缀</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>最新值</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>最后更新时间</string>
       </property>
      </column>
     </widget>
@@ -572,7 +576,7 @@
     <property name="title">
      <string>调试信息</string>
     </property>
-    <widget class="QPlainTextEdit" name="ui_debug_console">
+    <widget class="QTextEdit" name="ui_debug_console">
      <property name="geometry">
       <rect>
        <x>30</x>
