--- a/main_window.ui
+++ b/main_window.ui
@@ -355,7 +355,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>f7bd63b34b30303a11a36f6fd7628ef4</string>
+      <string>Your-ApiKey</string>
      </property>
     </widget>
     <widget class="QPushButton" name="ui_button_save_config">
@@ -364,9 +364,9 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>650</x>
-       <y>20</y>
-       <width>181</width>
+       <x>750</x>
+       <y>120</y>
+       <width>91</width>
        <height>31</height>
       </rect>
      </property>
@@ -380,14 +380,14 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>650</x>
-       <y>190</y>
-       <width>181</width>
+       <x>750</x>
+       <y>220</y>
+       <width>91</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string>开始订阅开关变化(MQTT)</string>
+      <string>MQTT启动</string>
      </property>
     </widget>
     <widget class="QPushButton" name="ui_button_get_sensors">
@@ -396,9 +396,9 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>650</x>
-       <y>100</y>
-       <width>181</width>
+       <x>610</x>
+       <y>70</y>
+       <width>141</width>
        <height>31</height>
       </rect>
      </property>
@@ -412,24 +412,27 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>650</x>
-       <y>230</y>
-       <width>181</width>
+       <x>750</x>
+       <y>260</y>
+       <width>91</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string>停止订阅开关变化(MQTT)</string>
+      <string>MQTT关闭</string>
      </property>
     </widget>
     <widget class="QPushButton" name="ui_button_check_api">
      <property name="geometry">
       <rect>
-       <x>650</x>
-       <y>60</y>
-       <width>181</width>
+       <x>610</x>
+       <y>30</y>
+       <width>141</width>
        <height>31</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>检查密钥</string>
@@ -441,7 +444,7 @@
     <widget class="QLabel" name="label_8">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>100</y>
        <width>81</width>
        <height>16</height>
@@ -454,7 +457,7 @@
     <widget class="QLabel" name="label_10">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>70</y>
        <width>72</width>
        <height>15</height>
@@ -467,9 +470,9 @@
     <widget class="QTableWidget" name="ui_table_sensors">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>130</y>
-       <width>611</width>
+       <width>711</width>
        <height>201</height>
       </rect>
      </property>
@@ -483,7 +486,7 @@
       <number>5</number>
      </property>
      <property name="columnCount">
-      <number>6</number>
+      <number>7</number>
      </property>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
@@ -510,12 +513,17 @@
      </column>
      <column>
       <property name="text">
+       <string>最新值</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
        <string>数据前缀</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>最新值</string>
+       <string>数据读取前缀</string>
       </property>
      </column>
      <column>
@@ -527,7 +535,7 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>30</y>
        <width>72</width>
        <height>15</height>
@@ -540,7 +548,7 @@
     <widget class="QPushButton" name="ui_button_help">
      <property name="geometry">
       <rect>
-       <x>690</x>
+       <x>750</x>
        <y>300</y>
        <width>93</width>
        <height>28</height>
@@ -558,6 +566,19 @@
        <width>291</width>
        <height>22</height>
       </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="ui_button_api_test">
+     <property name="geometry">
+      <rect>
+       <x>750</x>
+       <y>170</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>API测试</string>
      </property>
     </widget>
    </widget>
@@ -582,7 +603,7 @@
        <x>30</x>
        <y>60</y>
        <width>801</width>
-       <height>351</height>
+       <height>381</height>
       </rect>
      </property>
     </widget>
@@ -669,27 +690,14 @@
     <widget class="QPushButton" name="ui_button_clear_debug">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>420</y>
+       <x>650</x>
+       <y>20</y>
        <width>181</width>
        <height>28</height>
       </rect>
      </property>
      <property name="text">
       <string>清空调试信息</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="ui_button_send_raw_api">
-     <property name="geometry">
-      <rect>
-       <x>340</x>
-       <y>420</y>
-       <width>241</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>作为API数据发送到高亮的传感器</string>
      </property>
     </widget>
    </widget>
