--- a/yeelink_api_test.ui
+++ b/yeelink_api_test.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>780</width>
+    <width>802</width>
     <height>848</height>
    </rect>
   </property>
@@ -31,7 +31,7 @@
     <rect>
      <x>130</x>
      <y>20</y>
-     <width>611</width>
+     <width>651</width>
      <height>21</height>
     </rect>
    </property>
@@ -67,7 +67,7 @@
     <rect>
      <x>130</x>
      <y>100</y>
-     <width>541</width>
+     <width>571</width>
      <height>21</height>
     </rect>
    </property>
@@ -75,7 +75,7 @@
   <widget class="QPushButton" name="ui_button_select_file">
    <property name="geometry">
     <rect>
-     <x>680</x>
+     <x>720</x>
      <y>100</y>
      <width>61</width>
      <height>28</height>
@@ -111,48 +111,54 @@
   <widget class="QPushButton" name="ui_button_send_file">
    <property name="geometry">
     <rect>
-     <x>670</x>
+     <x>662</x>
      <y>150</y>
-     <width>93</width>
+     <width>131</width>
      <height>28</height>
     </rect>
    </property>
    <property name="text">
-    <string>发送文件</string>
+    <string>发送文件(POST)</string>
    </property>
   </widget>
   <widget class="QPushButton" name="ui_button_send_text">
    <property name="geometry">
     <rect>
-     <x>670</x>
-     <y>200</y>
-     <width>93</width>
+     <x>660</x>
+     <y>190</y>
+     <width>131</width>
      <height>28</height>
     </rect>
    </property>
    <property name="text">
-    <string>发送文本</string>
+    <string>发送文本(POST)</string>
    </property>
   </widget>
   <widget class="QPushButton" name="ui_button_send_text_hex">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>670</x>
+     <x>662</x>
      <y>250</y>
-     <width>93</width>
+     <width>131</width>
      <height>28</height>
     </rect>
    </property>
    <property name="text">
-    <string>发送文本hex</string>
+    <string>发送文本hex(POST)</string>
+   </property>
+   <property name="checkable">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="ui_button_send">
    <property name="geometry">
     <rect>
-     <x>670</x>
+     <x>662</x>
      <y>300</y>
-     <width>93</width>
+     <width>131</width>
      <height>28</height>
     </rect>
    </property>
@@ -172,7 +178,7 @@
    <property name="title">
     <string>调试信息</string>
    </property>
-   <widget class="QTextEdit" name="ui_text_output">
+   <widget class="QPlainTextEdit" name="ui_text_output">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -188,12 +194,38 @@
     <rect>
      <x>130</x>
      <y>60</y>
-     <width>611</width>
+     <width>651</width>
      <height>22</height>
     </rect>
    </property>
    <property name="editable">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ui_button_send_delete">
+   <property name="geometry">
+    <rect>
+     <x>660</x>
+     <y>430</y>
+     <width>131</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>仅发送(DELETE)</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ui_button_send_text_put">
+   <property name="geometry">
+    <rect>
+     <x>660</x>
+     <y>480</y>
+     <width>131</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>发送文本(PUT)</string>
    </property>
   </widget>
  </widget>
